# numeric-methods

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json
cmake/: Libraries.cmake
lab5/: lab5.typ
lab6/: CMakeLists.txt  lab6.typ  main.cpp  test.py
